@@ -9,13 +9,13 @@ OBJS=interp.o misc.o stacks.o fix_code.o startup.o main.o \
   fail.o signals.o printexc.o \
   compare.o ints.o floats.o str.o array.o io.o extern.o intern.o \
   hash.o sys.o meta.o parsing.o gc_ctrl.o terminfo.o md5.o obj.o \
-  lexing.o callback.o debugger.o
+  lexing.o callback.o debugger.o weak.o
 
 DOBJS=$(OBJS:.o=.d.o) instrtrace.d.o
 
 PRIMS=array.c compare.c extern.c floats.c gc_ctrl.c hash.c \
   intern.c interp.c ints.c io.c lexing.c md5.c meta.c obj.c parsing.c \
-  signals.c str.c sys.c terminfo.c callback.c
+  signals.c str.c sys.c terminfo.c callback.c weak.c
 
 all: ocamlrun
 
@@ -51,12 +51,13 @@ clean:
 	rm -f primitives prims.c opnames.h jumptbl.h
 
 primitives : $(PRIMS)
-	sed -n -e '/\/\* ML \*\//s/.* \([a-z0-9_]*\)(.*/\1/p' \
+	sed -n -e '/\/\* ML \*\//s/.* \([a-z0-9_][a-z0-9_]*\) *(.*/\1/p' \
 	    $(PRIMS) > primitives
 
 prims.c : primitives
 	(echo '#include "mlvalues.h"'; \
 	 echo '#include "prims.h"'; \
+	 echo 'static void foo () {}'; \
 	 sed -e 's/.*/extern value &();/' primitives; \
 	 echo 'c_primitive cprim[] = {'; \
 	 sed -e 's/.*/	&,/' primitives; \
